# sdltest

./: LICENSE  README.rst
assests/: __init__.py
python/: pyproject.toml  tox.ini
python/sdltest/: __main__.py  sprites.py
python/tests/: test_sprites.py
rust/: Cargo.toml  assests  tarpaulin.toml
rust/src/: main.rs  sprites.rs
