[tool.poetry]
name = "sdltest"
version = "0.1.0"
description = ""
authors = ["Jack Bradach <jack@bradach.net>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.1"
tox = "^3.23.1"
cleo = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"


[tool.poetry.scripts]
sdltest = 'sdltest.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
