[package]
name = "sdltest"
version = "0.1.0"
authors = ["Jack Bradach <jack@bradach.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum_macros = "0.20"

[dependencies.sdl2]
version = "0.34"
default-features = true
features = ["image"]